fixing hint alignment

--- a/src/style.css
+++ b/src/style.css
@@ -55,7 +55,7 @@ h2 {
 .instructions {
   border: 5px solid#f2e9d0;
   width: 50%;
-  margin-bottom: 20px;
+  margin-bottom: 0px;
   font-size: 30px;
   color: #e79e85;
   border-radius: 50px;
@@ -81,9 +81,9 @@ a {
   font-size: 15px;
   color: #bb5a5a;
   border-radius: 50px;
-  padding: 10px 10px;
-  width: 170px;
-  margin-left: 10px;
+  padding: 10px;
+  width: 50%;
   text-align: center;
+  margin: 0px 0 25px 0;
   display: block;
 }
